generated/RLangParser.py
# Generated from E:/Term7/Compiler/Project/RLangCompiler/grammers/RLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RLangParser ( Parser ):

    grammarFileName = "RLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ENVIRONMENT'", "'STATE'", "'ACTION'", 
                     "'ACTIONS'", "'DYNAMICS'", "'REWARDS'", "'TRAINING'", 
                     "'always'", "'when'", "'match'", "'if'", "'in'", "'continuous'", 
                     "'discrete'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':'", "'='", "';'", "','", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "'->'", "'=='", "'!='", "'>'", "'<'", 
                     "'+'", "'-'", "'*'", "'/'", "'&'", "'|'" ]

    symbolicNames = [ "<INVALID>", "KEYWORD_ENV", "KEYWORD_STATE", "KEYWORD_ACTION", 
                      "KEYWORD_ACTIONS", "KEYWORD_DYNAMICS", "KEYWORD_REWARDS", 
                      "KEYWORD_TRAINING", "KEYWORD_ALWAYS", "KEYWORD_WHEN", 
                      "KEYWORD_MATCH", "KEYWORD_IF", "IN", "TYPE_CONT", 
                      "TYPE_DISC", "ID", "NUMBER", "STRING", "ASSIGN_COLON", 
                      "ASSIGN_EQ", "SEMI", "COMMA", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "ARROW", "EQ", 
                      "NEQ", "GT", "LT", "PLUS", "MINUS", "MUL", "DIV", 
                      "AND", "OR", "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_environmentDef = 1
    RULE_stateDef = 2
    RULE_varDecl = 3
    RULE_type = 4
    RULE_paramList = 5
    RULE_actionsDef = 6
    RULE_dynamicsDef = 7
    RULE_dynamicsRule = 8
    RULE_statementList = 9
    RULE_statement = 10
    RULE_assignment = 11
    RULE_ifStatement = 12
    RULE_matchStatement = 13
    RULE_matchCase = 14
    RULE_rewardsDef = 15
    RULE_rewardRule = 16
    RULE_trainingDef = 17
    RULE_configAssign = 18
    RULE_condition = 19
    RULE_expr = 20

    ruleNames =  [ "prog", "environmentDef", "stateDef", "varDecl", "type", 
                   "paramList", "actionsDef", "dynamicsDef", "dynamicsRule", 
                   "statementList", "statement", "assignment", "ifStatement", 
                   "matchStatement", "matchCase", "rewardsDef", "rewardRule", 
                   "trainingDef", "configAssign", "condition", "expr" ]

    EOF = Token.EOF
    KEYWORD_ENV=1
    KEYWORD_STATE=2
    KEYWORD_ACTION=3
    KEYWORD_ACTIONS=4
    KEYWORD_DYNAMICS=5
    KEYWORD_REWARDS=6
    KEYWORD_TRAINING=7
    KEYWORD_ALWAYS=8
    KEYWORD_WHEN=9
    KEYWORD_MATCH=10
    KEYWORD_IF=11
    IN=12
    TYPE_CONT=13
    TYPE_DISC=14
    ID=15
    NUMBER=16
    STRING=17
    ASSIGN_COLON=18
    ASSIGN_EQ=19
    SEMI=20
    COMMA=21
    LPAREN=22
    RPAREN=23
    LBRACE=24
    RBRACE=25
    LBRACK=26
    RBRACK=27
    ARROW=28
    EQ=29
    NEQ=30
    GT=31
    LT=32
    PLUS=33
    MINUS=34
    MUL=35
    DIV=36
    AND=37
    OR=38
    WS=39
    COMMENT=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def environmentDef(self):
            return self.getTypedRuleContext(RLangParser.EnvironmentDefContext,0)


        def EOF(self):
            return self.getToken(RLangParser.EOF, 0)

        def getRuleIndex(self):
            return RLangParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = RLangParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.environmentDef()
            self.state = 43
            self.match(RLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnvironmentDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD_ENV(self):
            return self.getToken(RLangParser.KEYWORD_ENV, 0)

        def ID(self):
            return self.getToken(RLangParser.ID, 0)

        def LBRACE(self):
            return self.getToken(RLangParser.LBRACE, 0)

        def stateDef(self):
            return self.getTypedRuleContext(RLangParser.StateDefContext,0)


        def actionsDef(self):
            return self.getTypedRuleContext(RLangParser.ActionsDefContext,0)


        def RBRACE(self):
            return self.getToken(RLangParser.RBRACE, 0)

        def dynamicsDef(self):
            return self.getTypedRuleContext(RLangParser.DynamicsDefContext,0)


        def rewardsDef(self):
            return self.getTypedRuleContext(RLangParser.RewardsDefContext,0)


        def trainingDef(self):
            return self.getTypedRuleContext(RLangParser.TrainingDefContext,0)


        def getRuleIndex(self):
            return RLangParser.RULE_environmentDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnvironmentDef" ):
                listener.enterEnvironmentDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnvironmentDef" ):
                listener.exitEnvironmentDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnvironmentDef" ):
                return visitor.visitEnvironmentDef(self)
            else:
                return visitor.visitChildren(self)




    def environmentDef(self):

        localctx = RLangParser.EnvironmentDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_environmentDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(RLangParser.KEYWORD_ENV)
            self.state = 46
            self.match(RLangParser.ID)
            self.state = 47
            self.match(RLangParser.LBRACE)
            self.state = 48
            self.stateDef()
            self.state = 49
            self.actionsDef()
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 50
                self.dynamicsDef()


            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 53
                self.rewardsDef()


            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 56
                self.trainingDef()


            self.state = 59
            self.match(RLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD_STATE(self):
            return self.getToken(RLangParser.KEYWORD_STATE, 0)

        def LBRACE(self):
            return self.getToken(RLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(RLangParser.RBRACE, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RLangParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(RLangParser.VarDeclContext,i)


        def getRuleIndex(self):
            return RLangParser.RULE_stateDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateDef" ):
                listener.enterStateDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateDef" ):
                listener.exitStateDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateDef" ):
                return visitor.visitStateDef(self)
            else:
                return visitor.visitChildren(self)




    def stateDef(self):

        localctx = RLangParser.StateDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stateDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(RLangParser.KEYWORD_STATE)
            self.state = 62
            self.match(RLangParser.LBRACE)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 63
                self.varDecl()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(RLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RLangParser.ID, 0)

        def ASSIGN_COLON(self):
            return self.getToken(RLangParser.ASSIGN_COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(RLangParser.TypeContext,0)


        def paramList(self):
            return self.getTypedRuleContext(RLangParser.ParamListContext,0)


        def SEMI(self):
            return self.getToken(RLangParser.SEMI, 0)

        def getRuleIndex(self):
            return RLangParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = RLangParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(RLangParser.ID)
            self.state = 72
            self.match(RLangParser.ASSIGN_COLON)
            self.state = 73
            self.type_()
            self.state = 74
            self.paramList()
            self.state = 75
            self.match(RLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RLangParser.RULE_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ContinuousTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RLangParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPE_CONT(self):
            return self.getToken(RLangParser.TYPE_CONT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinuousType" ):
                listener.enterContinuousType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinuousType" ):
                listener.exitContinuousType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinuousType" ):
                return visitor.visitContinuousType(self)
            else:
                return visitor.visitChildren(self)


    class DiscreteTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RLangParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPE_DISC(self):
            return self.getToken(RLangParser.TYPE_DISC, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiscreteType" ):
                listener.enterDiscreteType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiscreteType" ):
                listener.exitDiscreteType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiscreteType" ):
                return visitor.visitDiscreteType(self)
            else:
                return visitor.visitChildren(self)



    def type_(self):

        localctx = RLangParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                localctx = RLangParser.ContinuousTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.match(RLangParser.TYPE_CONT)
                pass
            elif token in [14]:
                localctx = RLangParser.DiscreteTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(RLangParser.TYPE_DISC)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RLangParser.RULE_paramList

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ContinuousParamsContext(ParamListContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RLangParser.ParamListContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(RLangParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(RLangParser.RPAREN, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(RLangParser.ExprContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(RLangParser.COMMA)
            else:
                return self.getToken(RLangParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinuousParams" ):
                listener.enterContinuousParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinuousParams" ):
                listener.exitContinuousParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinuousParams" ):
                return visitor.visitContinuousParams(self)
            else:
                return visitor.visitChildren(self)


    class DiscreteParamsContext(ParamListContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RLangParser.ParamListContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LBRACK(self):
            return self.getToken(RLangParser.LBRACK, 0)
        def RBRACK(self):
            return self.getToken(RLangParser.RBRACK, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(RLangParser.ExprContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(RLangParser.COMMA)
            else:
                return self.getToken(RLangParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiscreteParams" ):
                listener.enterDiscreteParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiscreteParams" ):
                listener.exitDiscreteParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiscreteParams" ):
                return visitor.visitDiscreteParams(self)
            else:
                return visitor.visitChildren(self)



    def paramList(self):

        localctx = RLangParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                localctx = RLangParser.ContinuousParamsContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.match(RLangParser.LPAREN)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4292608) != 0):
                    self.state = 82
                    self.expr(0)
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==21:
                        self.state = 83
                        self.match(RLangParser.COMMA)
                        self.state = 84
                        self.expr(0)
                        self.state = 89
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 92
                self.match(RLangParser.RPAREN)
                pass
            elif token in [26]:
                localctx = RLangParser.DiscreteParamsContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(RLangParser.LBRACK)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4292608) != 0):
                    self.state = 94
                    self.expr(0)
                    self.state = 99
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==21:
                        self.state = 95
                        self.match(RLangParser.COMMA)
                        self.state = 96
                        self.expr(0)
                        self.state = 101
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 104
                self.match(RLangParser.RBRACK)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionsDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD_ACTIONS(self):
            return self.getToken(RLangParser.KEYWORD_ACTIONS, 0)

        def LBRACE(self):
            return self.getToken(RLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(RLangParser.RBRACE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(RLangParser.ID)
            else:
                return self.getToken(RLangParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(RLangParser.COMMA)
            else:
                return self.getToken(RLangParser.COMMA, i)

        def getRuleIndex(self):
            return RLangParser.RULE_actionsDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActionsDef" ):
                listener.enterActionsDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActionsDef" ):
                listener.exitActionsDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionsDef" ):
                return visitor.visitActionsDef(self)
            else:
                return visitor.visitChildren(self)




    def actionsDef(self):

        localctx = RLangParser.ActionsDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_actionsDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(RLangParser.KEYWORD_ACTIONS)
            self.state = 108
            self.match(RLangParser.LBRACE)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 109
                self.match(RLangParser.ID)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==21:
                    self.state = 110
                    self.match(RLangParser.COMMA)
                    self.state = 111
                    self.match(RLangParser.ID)
                    self.state = 116
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 119
            self.match(RLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DynamicsDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD_DYNAMICS(self):
            return self.getToken(RLangParser.KEYWORD_DYNAMICS, 0)

        def LBRACE(self):
            return self.getToken(RLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(RLangParser.RBRACE, 0)

        def dynamicsRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RLangParser.DynamicsRuleContext)
            else:
                return self.getTypedRuleContext(RLangParser.DynamicsRuleContext,i)


        def getRuleIndex(self):
            return RLangParser.RULE_dynamicsDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDynamicsDef" ):
                listener.enterDynamicsDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDynamicsDef" ):
                listener.exitDynamicsDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDynamicsDef" ):
                return visitor.visitDynamicsDef(self)
            else:
                return visitor.visitChildren(self)




    def dynamicsDef(self):

        localctx = RLangParser.DynamicsDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_dynamicsDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(RLangParser.KEYWORD_DYNAMICS)
            self.state = 122
            self.match(RLangParser.LBRACE)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8 or _la==9:
                self.state = 123
                self.dynamicsRule()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 129
            self.match(RLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DynamicsRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RLangParser.RULE_dynamicsRule

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AlwaysRuleContext(DynamicsRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RLangParser.DynamicsRuleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def KEYWORD_ALWAYS(self):
            return self.getToken(RLangParser.KEYWORD_ALWAYS, 0)
        def LBRACE(self):
            return self.getToken(RLangParser.LBRACE, 0)
        def statementList(self):
            return self.getTypedRuleContext(RLangParser.StatementListContext,0)

        def RBRACE(self):
            return self.getToken(RLangParser.RBRACE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlwaysRule" ):
                listener.enterAlwaysRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlwaysRule" ):
                listener.exitAlwaysRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlwaysRule" ):
                return visitor.visitAlwaysRule(self)
            else:
                return visitor.visitChildren(self)


    class WhenRuleContext(DynamicsRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RLangParser.DynamicsRuleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def KEYWORD_WHEN(self):
            return self.getToken(RLangParser.KEYWORD_WHEN, 0)
        def LPAREN(self):
            return self.getToken(RLangParser.LPAREN, 0)
        def condition(self):
            return self.getTypedRuleContext(RLangParser.ConditionContext,0)

        def RPAREN(self):
            return self.getToken(RLangParser.RPAREN, 0)
        def LBRACE(self):
            return self.getToken(RLangParser.LBRACE, 0)
        def statementList(self):
            return self.getTypedRuleContext(RLangParser.StatementListContext,0)

        def RBRACE(self):
            return self.getToken(RLangParser.RBRACE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhenRule" ):
                listener.enterWhenRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhenRule" ):
                listener.exitWhenRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhenRule" ):
                return visitor.visitWhenRule(self)
            else:
                return visitor.visitChildren(self)



    def dynamicsRule(self):

        localctx = RLangParser.DynamicsRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dynamicsRule)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                localctx = RLangParser.AlwaysRuleContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(RLangParser.KEYWORD_ALWAYS)
                self.state = 132
                self.match(RLangParser.LBRACE)
                self.state = 133
                self.statementList()
                self.state = 134
                self.match(RLangParser.RBRACE)
                pass
            elif token in [9]:
                localctx = RLangParser.WhenRuleContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(RLangParser.KEYWORD_WHEN)
                self.state = 137
                self.match(RLangParser.LPAREN)
                self.state = 138
                self.condition()
                self.state = 139
                self.match(RLangParser.RPAREN)
                self.state = 140
                self.match(RLangParser.LBRACE)
                self.state = 141
                self.statementList()
                self.state = 142
                self.match(RLangParser.RBRACE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(RLangParser.StatementContext,i)


        def getRuleIndex(self):
            return RLangParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)




    def statementList(self):

        localctx = RLangParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self._errHandler.sync(self)
